# Argus

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/engine/: evaluate.cpp  evaluate.h  movesort.cpp  movesort.h  search.cpp  search.h  tt.cpp  tt.h
src/uci/: uci.cpp  uci.h
tests/: perft.cpp
